more animals, better world gen

--- a/config/apotheosis/deadly.cfg
+++ b/config/apotheosis/deadly.cfg
@@ -142,6 +142,102 @@ general {
 
 "random spawners" {
     #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:badger"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:blackbear"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:boar"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:bobbit_worm"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:brownbear"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:coyote"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:crab"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:deer"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:eel_freshwater"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:eel_saltwater"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:feralwolf"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:fox"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:goat"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:goose"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:hirschgeist"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:horseshoecrab"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:jellyfish"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:kermodebear"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:lammergeier"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:lamprey"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:moose"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:nautilus"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:pheasant"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:reindeer"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:shark"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:songbird"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:squirrel"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:tarantula"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:turkey"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:walrus"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:whale"=1
+
+    #  [range: 0 ~ 50, default: 1]
+    I:"betteranimalsplus:zotzpyre"=1
+
+    #  [range: 0 ~ 50, default: 1]
     I:"biomesoplenty:wasp"=1
 
     #  [range: 0 ~ 50, default: 1]
@@ -359,23 +455,11 @@ general {
 
     #  [range: 0 ~ 50, default: 1]
     I:"iceandfire:stymphalianbird"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"illagers_plus:archer"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"illagers_plus:enchanter"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"illagers_plus:furantur"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"illagers_plus:hoarder"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"illagers_plus:illager_king"=1
-
-    #  [range: 0 ~ 50, default: 1]
     I:"illagers_plus:necromancer"=1
 
     #  [range: 0 ~ 50, default: 1]
