--- a/config/apotheosis/enchantability.cfg
+++ b/config/apotheosis/enchantability.cfg
@@ -196,6 +196,18 @@
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 5]
     I:"Yellow Deathworm"=5
 
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
+    I:bear_cape_black=15
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
+    I:bear_cape_brown=15
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
+    I:bear_cape_kermode=15
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 12]
+    I:bone=12
+
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 17]
     I:bookWyrmScales=17
 
@@ -253,6 +265,24 @@
     # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 20]
     I:umbrium=20
     I:witches=20
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
+    I:wolf_cape_arctic=15
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
+    I:wolf_cape_black=15
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
+    I:wolf_cape_brown=15
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
+    I:wolf_cape_classic=15
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
+    I:wolf_cape_red=15
+
+    # The enchantability of this armor material. [range: 0 ~ 2147483647, default: 15]
+    I:wolf_cape_timber=15
 }
 
 
