--- a/config/apotheosis/names.cfg
+++ b/config/apotheosis/names.cfg
@@ -298,6 +298,22 @@ armors {
      >
 
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:bear_cape_black <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:bear_cape_brown <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:bear_cape_kermode <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:bone <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:bookWyrmScales <
      >
 
@@ -369,6 +385,30 @@ armors {
 
     # A list of material-based prefix names for the given armor material. May be empty. [default: ]
     S:umbrium <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:wolf_cape_arctic <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:wolf_cape_black <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:wolf_cape_brown <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:wolf_cape_classic <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:wolf_cape_red <
+     >
+
+    # A list of material-based prefix names for the given armor material. May be empty. [default: ]
+    S:wolf_cape_timber <
      >
 }
 
