--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -185,6 +185,14 @@ entitiesalwaysinfernal {
     B:barakoan_barakoana=false
     B:barakoana=false
     B:barakoaya=false
+    B:betteranimalsplus.badger=false
+    B:betteranimalsplus.blackbear=false
+    B:betteranimalsplus.boar=false
+    B:betteranimalsplus.brownbear=false
+    B:betteranimalsplus.hirschgeist=false
+    B:betteranimalsplus.lamprey=false
+    B:betteranimalsplus.shark=false
+    B:betteranimalsplus.zotzpyre=false
     B:bound_soul=false
     B:calpod=false
     B:"charm:spectre"=false
@@ -411,6 +419,7 @@ entitybasehealth {
     D:archer=20.0
     D:barakoan_barakoana=20.842906951904297
     D:barakoaya=26.536590576171875
+    D:betteranimalsplus.badger=12.0
     D:bound_soul=31.020423889160156
     D:"charm:spectre"=0.5
     D:defiledlands.host=37.345802307128906
@@ -692,6 +701,14 @@ permittedentities {
     B:barakoan_barakoana=true
     B:barakoana=true
     B:barakoaya=true
+    B:betteranimalsplus.badger=true
+    B:betteranimalsplus.blackbear=true
+    B:betteranimalsplus.boar=true
+    B:betteranimalsplus.brownbear=true
+    B:betteranimalsplus.hirschgeist=true
+    B:betteranimalsplus.lamprey=true
+    B:betteranimalsplus.shark=true
+    B:betteranimalsplus.zotzpyre=true
     B:bound_soul=true
     B:calpod=true
     B:"charm:spectre"=true
