--- a/config/mysticalworld.cfg
+++ b/config/mysticalworld.cfg
@@ -55,13 +55,13 @@ general {
         B:spawnBeetle=true
 
         # Enable the spawning of Deer.
-        B:spawnDeer=true
+        B:spawnDeer=false
 
         # Enable the spawning of Endermini.
         B:spawnEndermini=true
 
         # Enable the spawning of Fox.
-        B:spawnFox=true
+        B:spawnFox=false
 
         # Enable the spawning of Frog.
         B:spawnFrog=true
@@ -92,10 +92,10 @@ general {
          >
 
         # Maximum number of deer to spawn in a group
-        I:max=4
+        I:max=0
 
         # Min number of deer to spawn in a group
-        I:min=2
+        I:min=0
 
         # Spawn rate of deer
         I:rate=6
@@ -116,10 +116,10 @@ general {
          >
 
         # Maximum number of fox to spawn in a group
-        I:max=3
+        I:max=0
 
         # Min number of fox to spawn in a group
-        I:min=1
+        I:min=0
 
         # Spawn rate of fox
         I:rate=4
