--- a/config/MoCreatures/MoCreatures.cfg
+++ b/config/MoCreatures/MoCreatures.cfg
@@ -109,7 +109,7 @@ bird {
 ####################
 
 blackbear {
-    B:canspawn=true
+    B:canspawn=false
     I:frequency=6
     I:maxchunk=4
     I:maxspawn=3
@@ -122,7 +122,7 @@ blackbear {
 ####################
 
 boar {
-    B:canspawn=true
+    B:canspawn=false
     I:frequency=8
     I:maxchunk=3
     I:maxspawn=2
@@ -304,7 +304,7 @@ elephant {
 ####################
 
 ent {
-    B:canspawn=true
+    B:canspawn=false
     I:frequency=4
     I:maxchunk=3
     I:maxspawn=2
@@ -347,7 +347,7 @@ fishy {
     I:frequency=12
     I:maxchunk=6
     I:maxspawn=6
-    I:minspawn=1
+    I:minspawn=4
 }
 
 
@@ -434,7 +434,7 @@ greenogre {
 ####################
 
 grizzlybear {
-    B:canspawn=true
+    B:canspawn=false
     I:frequency=6
     I:maxchunk=4
     I:maxspawn=2
@@ -759,7 +759,7 @@ scorpion {
 ####################
 
 shark {
-    B:canspawn=true
+    B:canspawn=false
     I:frequency=6
     I:maxchunk=3
     I:maxspawn=2
@@ -889,7 +889,7 @@ wildhorse {
 ####################
 
 wildpolarbear {
-    B:canspawn=true
+    B:canspawn=false
     I:frequency=6
     I:maxchunk=4
     I:maxspawn=2
