--- a/config/ZombieAwareness/MobLists.cfg
+++ b/config/ZombieAwareness/MobLists.cfg
@@ -80,6 +80,17 @@ tickable_entities {
     B:barakoaya=false
     B:behemoth=false
     B:belph=false
+    B:betteranimalsplus.badger=false
+    B:betteranimalsplus.blackbear=false
+    B:betteranimalsplus.boar=false
+    B:betteranimalsplus.brownbear=false
+    B:betteranimalsplus.coyote=false
+    B:betteranimalsplus.feralwolf=false
+    B:betteranimalsplus.hirschgeist=false
+    B:betteranimalsplus.lamprey=false
+    B:betteranimalsplus.shark=false
+    B:betteranimalsplus.tarantula=true
+    B:betteranimalsplus.zotzpyre=false
     B:bound_soul=true
     B:calpod=false
     B:"charm:spectre"=false
