--- a/config/ice_and_fire.cfg
+++ b/config/ice_and_fire.cfg
@@ -5,10 +5,10 @@ all {
     S:"Amphithere Attack Strength"=7.0
 
     # How fast amphitheres fly. [range: 0.0 ~ 3.0, default: 1.75]
-    S:"Amphithere Flight Speed"=1.75tr
+    S:"Amphithere Flight Speed"=1.75
 
     # Maximum amphithere health [range: 1.0 ~ 10000.0, default: 50.0]
-    S:"Amphithere Max Health"=50.0
+    S:"Amphithere Max Health"=75.0
 
     # Amphithere spawn weight. Lower = lower chance to spawn [range: 1 ~ 10000, default: 5]
     I:"Amphithere Spawn Weight"=10
@@ -296,7 +296,7 @@ all {
     S:"Sea Serpent Base Attack Strength"=4.0
 
     # Default sea serpent health, this is scaled to the sea serpent's particular size [range: 1.0 ~ 10000.0, default: 20.0]
-    S:"Sea Serpent Base Health"=50.0
+    S:"Sea Serpent Base Health"=180
 
     # Whether or not sea serpents can break weak blocks in their way [default: true]
     B:"Sea Serpent Griefing"=true
@@ -355,7 +355,7 @@ all {
     I:"Spawn Pixies Chance"=60
 
     # 1 out of this number chance per chunk for generation [range: 1 ~ 10000, default: 200]
-    I:"Spawn Sea Serpent Chance"=200
+    I:"Spawn Sea Serpent Chance"=160
 
     # True if sea serpents are allowed to spawn [default: true]
     B:"Spawn Sea Serpents"=true
