--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -1552,7 +1552,7 @@ world {
     B:"Broken nether portals"=true
     B:"Buried treasure"=true
     B:"Cave roots"=true
-    B:Crabs=true
+    B:Crabs=false
     B:"Crystal caves"=true
     B:"Default world options"=true
     B:"Depth mobs"=true
