--- a/config/foodexpansion.cfg
+++ b/config/foodexpansion.cfg
@@ -53,8 +53,8 @@ general {
         B:"If set to true, ocelots are not allowed to drop Ocelot Meat"=false
         B:"If set to true, parrots are not allowed to drop Parrot Meat"=false
         B:"If set to true, polar bears are not allowed to drop Polar Bear Meat"=false
-        B:"If set to true, squids are not allowed to drop Squid Meat"=false
-        B:"If set to true, wolves are not allowed to drop Wolf Meat"=false
+        B:"If set to true, squids are not allowed to drop Squid Meat"=true
+        B:"If set to true, wolves are not allowed to drop Wolf Meat"=true
     }
 
     ##########################################################################################################
