--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -261,8 +261,10 @@ entitiesalwaysinfernal {
     B:trumpetskeleton.TrumpetSkeleton=false
     B:twilightforest.armored_giant=false
     B:twilightforest.giant_miner=false
+    B:twilightforest.hedge_spider=false
     B:twilightforest.hydra=false
     B:twilightforest.knight_phantom=false
+    B:twilightforest.kobold=false
     B:twilightforest.lich=false
     B:twilightforest.minoshroom=false
     B:twilightforest.naga=false
@@ -420,6 +422,10 @@ entitybasehealth {
     D:barakoan_barakoana=20.842906951904297
     D:barakoaya=26.536590576171875
     D:betteranimalsplus.badger=12.0
+    D:betteranimalsplus.blackbear=30.0
+    D:betteranimalsplus.boar=21.084749221801758
+    D:betteranimalsplus.hirschgeist=150.0
+    D:betteranimalsplus.zotzpyre=20.0
     D:bound_soul=31.020423889160156
     D:"charm:spectre"=0.5
     D:defiledlands.host=37.345802307128906
@@ -454,6 +460,7 @@ entitybasehealth {
     D:"mocreatures:werewolf"=40.0
     D:"mocreatures:wraith"=10.0
     D:"mocreatures:wwolf"=15.0
+    D:naga=30.0
     D:pirate_mimic=35.0
     D:"quark:Pirate"=20.0
     D:"quark:ashen"=20.0
@@ -777,8 +784,10 @@ permittedentities {
     B:trumpetskeleton.TrumpetSkeleton=true
     B:twilightforest.armored_giant=true
     B:twilightforest.giant_miner=true
+    B:twilightforest.hedge_spider=true
     B:twilightforest.hydra=true
     B:twilightforest.knight_phantom=true
+    B:twilightforest.kobold=true
     B:twilightforest.lich=true
     B:twilightforest.minoshroom=true
     B:twilightforest.naga=true
