--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -57,7 +57,7 @@ _modules {
 
 
 automation {
-    B:"Animals eat floor food"=true
+    B:"Animals eat floor food"=false
     B:"Chain linkage"=true
     B:Chute=true
     B:"Color slime"=true
@@ -1552,7 +1552,7 @@ world {
     B:"Broken nether portals"=true
     B:"Buried treasure"=true
     B:"Cave roots"=true
-    B:Crabs=false
+    B:Crabs=true
     B:"Crystal caves"=true
     B:"Default world options"=true
     B:"Depth mobs"=true
@@ -1998,8 +1998,8 @@ world {
     }
 
     crabs {
-        I:"Largest spawn group"=3
-        I:"Smallest spawn group"=1
+        I:"Largest spawn group"=0
+        I:"Smallest spawn group"=0
 
         # The higher, the more will spawn
         I:"Spawn Weight"=40
