--- a/config/spawnercontrol/spawnercontrol.cfg
+++ b/config/spawnercontrol/spawnercontrol.cfg
@@ -10,7 +10,7 @@ general {
      >
 
     # If set to true, the mod will generate its own creative tab to put custom spawners in
-    B:makeCreativeTab=false
+    B:makeCreativeTab=true
 
     ##########################################################################################################
     # vanillaspawnerconfig
@@ -90,7 +90,7 @@ general {
 
         # This multiplier is applied on the spawner's spawn delay each time a mob is spawned. 
         # Can be used to make mobs spawned exponentially faster or slower.
-        D:spawnRateModifier=0.75
+        D:spawnRateModifier=1.2
 
         # The minimum amount of xp dropped by a spawner when broken
         I:xpDropped=20
