--- a/config/MoCreatures/MoCreatures.cfg
+++ b/config/MoCreatures/MoCreatures.cfg
@@ -45,7 +45,7 @@ angler {
 
 ant {
     B:canspawn=true
-    I:frequency=7
+    I:frequency=2
     I:maxchunk=4
     I:maxspawn=4
     I:minspawn=1
@@ -71,7 +71,7 @@ bass {
 
 bee {
     B:canspawn=true
-    I:frequency=6
+    I:frequency=2
     I:maxchunk=3
     I:maxspawn=2
     I:minspawn=1
@@ -84,7 +84,7 @@ bee {
 
 biggolem {
     B:canspawn=true
-    I:frequency=3
+    I:frequency=4
     I:maxchunk=1
     I:maxspawn=1
     I:minspawn=1
@@ -97,7 +97,7 @@ biggolem {
 
 bird {
     B:canspawn=true
-    I:frequency=15
+    I:frequency=2
     I:maxchunk=4
     I:maxspawn=3
     I:minspawn=2
@@ -110,7 +110,7 @@ bird {
 
 blackbear {
     B:canspawn=false
-    I:frequency=6
+    I:frequency=0
     I:maxchunk=4
     I:maxspawn=3
     I:minspawn=1
@@ -123,7 +123,7 @@ blackbear {
 
 boar {
     B:canspawn=false
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=3
     I:maxspawn=2
     I:minspawn=2
@@ -136,7 +136,7 @@ boar {
 
 bunny {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=4
     I:maxspawn=3
     I:minspawn=2
@@ -149,7 +149,7 @@ bunny {
 
 butterfly {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=3
     I:maxspawn=3
     I:minspawn=1
@@ -201,7 +201,7 @@ cod {
 
 crab {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=3
     I:maxchunk=2
     I:maxspawn=2
     I:minspawn=1
@@ -214,7 +214,7 @@ crab {
 
 cricket {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=2
     I:maxspawn=2
     I:minspawn=1
@@ -227,7 +227,7 @@ cricket {
 
 crocodile {
     B:canspawn=true
-    I:frequency=6
+    I:frequency=8
     I:maxchunk=2
     I:maxspawn=2
     I:minspawn=1
@@ -240,7 +240,7 @@ crocodile {
 
 deer {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=2
     I:maxspawn=2
     I:minspawn=1
@@ -266,7 +266,7 @@ dolphin {
 
 dragonfly {
     B:canspawn=true
-    I:frequency=6
+    I:frequency=2
     I:maxchunk=2
     I:maxspawn=2
     I:minspawn=1
@@ -279,7 +279,7 @@ dragonfly {
 
 duck {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=3
     I:maxspawn=2
     I:minspawn=1
@@ -305,7 +305,7 @@ elephant {
 
 ent {
     B:canspawn=false
-    I:frequency=4
+    I:frequency=0
     I:maxchunk=3
     I:maxspawn=2
     I:minspawn=1
@@ -318,7 +318,7 @@ ent {
 
 firefly {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=3
     I:maxspawn=2
     I:minspawn=1
@@ -370,7 +370,7 @@ flamewraith {
 
 fly {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=2
     I:maxspawn=2
     I:minspawn=1
@@ -383,7 +383,7 @@ fly {
 
 fox {
     B:canspawn=false
-    I:frequency=8
+    I:frequency=0
     I:maxchunk=2
     I:maxspawn=1
     I:minspawn=1
@@ -396,7 +396,7 @@ fox {
 
 goat {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=2
     I:maxspawn=3
     I:minspawn=1
@@ -435,7 +435,7 @@ greenogre {
 
 grizzlybear {
     B:canspawn=false
-    I:frequency=6
+    I:frequency=0
     I:maxchunk=4
     I:maxspawn=2
     I:minspawn=1
@@ -499,8 +499,8 @@ jellyfish {
 ####################
 
 kitty {
-    B:canspawn=true
-    I:frequency=8
+    B:canspawn=false
+    I:frequency=0
     I:maxchunk=3
     I:maxspawn=2
     I:minspawn=1
@@ -513,7 +513,7 @@ kitty {
 
 komododragon {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=2
     I:maxspawn=2
     I:minspawn=1
@@ -526,7 +526,7 @@ komododragon {
 
 leopard {
     B:canspawn=true
-    I:frequency=6
+    I:frequency=3
     I:maxchunk=4
     I:maxspawn=2
     I:minspawn=1
@@ -539,7 +539,7 @@ leopard {
 
 lion {
     B:canspawn=true
-    I:frequency=6
+    I:frequency=3
     I:maxchunk=4
     I:maxspawn=2
     I:minspawn=1
@@ -552,7 +552,7 @@ lion {
 
 maggot {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=2
     I:maxspawn=2
     I:minspawn=1
@@ -617,7 +617,7 @@ minigolem {
 
 mole {
     B:canspawn=true
-    I:frequency=7
+    I:frequency=2
     I:maxchunk=3
     I:maxspawn=2
     I:minspawn=1
@@ -630,7 +630,7 @@ mole {
 
 mouse {
     B:canspawn=true
-    I:frequency=7
+    I:frequency=5
     I:maxchunk=2
     I:maxspawn=2
     I:minspawn=1
@@ -643,7 +643,7 @@ mouse {
 
 ostrich {
     B:canspawn=true
-    I:frequency=4
+    I:frequency=2
     I:maxchunk=3
     I:maxspawn=1
     I:minspawn=1
@@ -656,7 +656,7 @@ ostrich {
 
 pandabear {
     B:canspawn=true
-    I:frequency=6
+    I:frequency=2
     I:maxchunk=4
     I:maxspawn=3
     I:minspawn=1
@@ -669,7 +669,7 @@ pandabear {
 
 panther {
     B:canspawn=true
-    I:frequency=6
+    I:frequency=3
     I:maxchunk=4
     I:maxspawn=2
     I:minspawn=1
@@ -695,7 +695,7 @@ piranha {
 
 raccoon {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=2
     I:maxspawn=2
     I:minspawn=1
@@ -708,7 +708,7 @@ raccoon {
 
 rat {
     B:canspawn=true
-    I:frequency=7
+    I:frequency=15
     I:maxchunk=2
     I:maxspawn=2
     I:minspawn=1
@@ -721,7 +721,7 @@ rat {
 
 roach {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=2
     I:maxspawn=2
     I:minspawn=1
@@ -747,7 +747,7 @@ salmon {
 
 scorpion {
     B:canspawn=true
-    I:frequency=6
+    I:frequency=12
     I:maxchunk=3
     I:maxspawn=3
     I:minspawn=1
@@ -760,7 +760,7 @@ scorpion {
 
 shark {
     B:canspawn=false
-    I:frequency=6
+    I:frequency=0
     I:maxchunk=3
     I:maxspawn=2
     I:minspawn=1
@@ -786,7 +786,7 @@ silverskeleton {
 
 snail {
     B:canspawn=true
-    I:frequency=7
+    I:frequency=3
     I:maxchunk=2
     I:maxspawn=2
     I:minspawn=1
@@ -799,7 +799,7 @@ snail {
 
 snake {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=3
     I:maxspawn=2
     I:minspawn=1
@@ -825,7 +825,7 @@ stingray {
 
 tiger {
     B:canspawn=true
-    I:frequency=6
+    I:frequency=3
     I:maxchunk=4
     I:maxspawn=2
     I:minspawn=1
@@ -838,7 +838,7 @@ tiger {
 
 turkey {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=2
     I:maxchunk=2
     I:maxspawn=2
     I:minspawn=1
@@ -851,7 +851,7 @@ turkey {
 
 turtle {
     B:canspawn=true
-    I:frequency=6
+    I:frequency=2
     I:maxchunk=3
     I:maxspawn=2
     I:minspawn=1
@@ -877,7 +877,7 @@ werewolf {
 
 wildhorse {
     B:canspawn=false
-    I:frequency=8
+    I:frequency=0
     I:maxchunk=4
     I:maxspawn=4
     I:minspawn=1
@@ -890,7 +890,7 @@ wildhorse {
 
 wildpolarbear {
     B:canspawn=false
-    I:frequency=6
+    I:frequency=0
     I:maxchunk=4
     I:maxspawn=2
     I:minspawn=1
@@ -903,7 +903,7 @@ wildpolarbear {
 
 wraith {
     B:canspawn=true
-    I:frequency=6
+    I:frequency=12
     I:maxchunk=3
     I:maxspawn=4
     I:minspawn=1
@@ -929,7 +929,7 @@ wwolf {
 
 wyvern {
     B:canspawn=true
-    I:frequency=8
+    I:frequency=0
     I:maxchunk=3
     I:maxspawn=3
     I:minspawn=1
