--- a/config/lycanitesmobs/spawning.cfg
+++ b/config/lycanitesmobs/spawning.cfg
@@ -26,7 +26,7 @@
     B:"Disable Spawning"=false
 
     # If true, some vanilla spawns in various biomes will be removed, note that vanilla mobs should still be easy to find, only they will be more biome specific.
-    B:"Edit Vanilla Spawning"=false
+    B:"Edit Vanilla Spawning"=true
 
     # If true, mobs will double check if their required blocks are nearby, such as Cinders needing so many blocks of fire.
     B:"Enforce Block Costs"=true
@@ -50,7 +50,7 @@
     B:"Use Surface Light Level"=true
 
     # Scales the spawn weights of all mobs from this mod. For example, you can use this to quickly half the spawn rates of mobs from this mod compared to vanilla/other mod mobs by setting it to 0.5.
-    D:"Weight Scale"=1.0
+    D:"Weight Scale"=1.3
 }
 
 
