--- a/config/CustomSpawner/overworld/Creatures/GITHUB.cfg
+++ b/config/CustomSpawner/overworld/Creatures/GITHUB.cfg
@@ -28,7 +28,7 @@ amphithere {
 cyclops {
     S:biomegroups <CYCLOPS_DEFAULT>
     B:canSpawn=true
-    I:frequency=8
+    I:frequency=5
     I:maxChunk=4
     I:maxLightlevel=-1
     I:maxSpawn=3
@@ -59,7 +59,7 @@ deathworm {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -259,7 +259,7 @@ dreadthrall {
 firedragon {
     S:biomegroups <FIREDRAGON_DEFAULT>
     B:canSpawn=true
-    I:frequency=8
+    I:frequency=4
     I:maxChunk=4
     I:maxLightlevel=-1
     I:maxSpawn=3
@@ -270,426 +270,6 @@ firedragon {
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
     S:type=MONSTER
-    ####################
-    # gorgon
-    ####################
-
-    gorgon {
-        S:biomegroups <GORGON_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
-    ####################
-    # hippocampus
-    ####################
-
-    hippocampus {
-        S:biomegroups <HIPPOCAMPUS_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=CREATURE
-    }
-
-    ####################
-    # hippogryph
-    ####################
-
-    hippogryph {
-        S:biomegroups <HIPPOGRYPH_DEFAULT>
-        B:canSpawn=true
-        I:frequency=2
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=1
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=1
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
-    ####################
-    # icedragon
-    ####################
-
-    icedragon {
-        S:biomegroups <ICEDRAGON_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
-    ####################
-    # ifcockatrice
-    ####################
-
-    ifcockatrice {
-        S:biomegroups <IFCOCKATRICE_DEFAULT>
-        B:canSpawn=true
-        I:frequency=4
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=2
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=1
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
-    ####################
-    # ifhydra
-    ####################
-
-    ifhydra {
-        S:biomegroups <IFHYDRA_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
-    ####################
-    # ifmobskull
-    ####################
-
-    ifmobskull {
-        S:biomegroups <IFMOBSKULL_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=CREATURE
-    }
-
-    ####################
-    # ifpixie
-    ####################
-
-    ifpixie {
-        S:biomegroups <IFPIXIE_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=CREATURE
-    }
-
-    ####################
-    # iftroll
-    ####################
-
-    iftroll {
-        S:biomegroups <IFTROLL_DEFAULT>
-        B:canSpawn=true
-        I:frequency=500
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=1
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=1
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
-    ####################
-    # myrmexegg
-    ####################
-
-    myrmexegg {
-        S:biomegroups <MYRMEXEGG_DEFAULT>
-        B:canSpawn=false
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=UNDEFINED
-    }
-
-    ####################
-    # myrmexqueen
-    ####################
-
-    myrmexqueen {
-        S:biomegroups <MYRMEXQUEEN_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
-    ####################
-    # myrmexroyal
-    ####################
-
-    myrmexroyal {
-        S:biomegroups <MYRMEXROYAL_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
-    ####################
-    # myrmexsentinel
-    ####################
-
-    myrmexsentinel {
-        S:biomegroups <MYRMEXSENTINEL_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
-    ####################
-    # myrmexsoldier
-    ####################
-
-    myrmexsoldier {
-        S:biomegroups <MYRMEXSOLDIER_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
-    ####################
-    # myrmexswarmer
-    ####################
-
-    myrmexswarmer {
-        S:biomegroups <MYRMEXSWARMER_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
-    ####################
-    # myrmexworker
-    ####################
-
-    myrmexworker {
-        S:biomegroups <MYRMEXWORKER_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
-    ####################
-    # seaserpent
-    ####################
-
-    seaserpent {
-        S:biomegroups <SEASERPENT_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
-    ####################
-    # siren
-    ####################
-
-    siren {
-        S:biomegroups <SIREN_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
-    ####################
-    # snowvillager
-    ####################
-
-    snowvillager {
-        S:biomegroups <SNOWVILLAGER_DEFAULT>
-        B:canSpawn=false
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=CREATURE
-    }
-
-    ####################
-    # stonestatue
-    ####################
-
-    stonestatue {
-        S:biomegroups <STONESTATUE_DEFAULT>
-        B:canSpawn=false
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=UNDEFINED
-    }
-
-    ####################
-    # stymphalianbird
-    ####################
-
-    stymphalianbird {
-        S:biomegroups <STYMPHALIANBIRD_DEFAULT>
-        B:canSpawn=true
-        I:frequency=8
-        I:maxChunk=4
-        I:maxLightlevel=-1
-        I:maxSpawn=3
-        I:maxSpawnHeight=256
-        I:minLightlevel=-1
-        I:minSpawn=2
-        I:minSpawnHeight=0
-        S:opaqueBlock=all
-        S:spawnBlockBlacklist <>
-        S:type=MONSTER
-    }
-
 }
 
 
@@ -709,7 +289,7 @@ gorgon {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -719,7 +299,7 @@ gorgon {
 
 hippocampus {
     B:canSpawn=true
-    I:frequency=8
+    I:frequency=6
     I:maxChunk=4
     I:maxLightlevel=-1
     I:maxSpawn=3
@@ -729,7 +309,7 @@ hippocampus {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=CREATURE
+    S:type=WATER_CREATURE
 }
 
 
@@ -749,7 +329,7 @@ hippogryph {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=CREATURE
+    S:type=AMBIENT
 }
 
 
@@ -759,7 +339,7 @@ hippogryph {
 
 icedragon {
     B:canSpawn=true
-    I:frequency=8
+    I:frequency=4
     I:maxChunk=4
     I:maxLightlevel=-1
     I:maxSpawn=3
@@ -789,7 +369,7 @@ ifcockatrice {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=CREATURE
+    S:type=AMBIENT
 }
 
 
@@ -799,7 +379,7 @@ ifcockatrice {
 
 ifhydra {
     B:canSpawn=true
-    I:frequency=8
+    I:frequency=4
     I:maxChunk=4
     I:maxLightlevel=-1
     I:maxSpawn=3
@@ -809,7 +389,7 @@ ifhydra {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -861,10 +441,10 @@ iftroll {
     B:canSpawn=true
     I:frequency=500
     I:maxChunk=4
-    I:maxLightlevel=-1
-    I:maxSpawn=1
+    I:maxLightlevel=6
+    I:maxSpawn=2
     I:maxSpawnHeight=256
-    I:minLightlevel=-1
+    I:minLightlevel=0
     I:minSpawn=1
     I:minSpawnHeight=0
     S:opaqueBlock=all
@@ -1039,7 +619,7 @@ seaserpent {
 
 siren {
     B:canSpawn=true
-    I:frequency=8
+    I:frequency=4
     I:maxChunk=4
     I:maxLightlevel=-1
     I:maxSpawn=3
@@ -1049,7 +629,7 @@ siren {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=WATER_CREATURE
 }
 
 
@@ -1099,7 +679,7 @@ stonestatue {
 
 stymphalianbird {
     B:canSpawn=true
-    I:frequency=8
+    I:frequency=4
     I:maxChunk=4
     I:maxLightlevel=-1
     I:maxSpawn=3
@@ -1109,7 +689,7 @@ stymphalianbird {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
