--- a/config/CustomSpawner/overworld/Creatures/LYCANITESMOBS.cfg
+++ b/config/CustomSpawner/overworld/Creatures/LYCANITESMOBS.cfg
@@ -101,7 +101,7 @@ aglebemu {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -353,7 +353,7 @@ beholder {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -458,7 +458,7 @@ chupacabra {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -563,7 +563,7 @@ concapede {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -752,7 +752,7 @@ ent {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -773,7 +773,7 @@ epion {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -794,7 +794,7 @@ erepede {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -878,7 +878,7 @@ feradon {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -1078,7 +1078,7 @@ grue {
 herma {
     S:biomegroups <HERMA_DEFAULT>
     B:canSpawn=true
-    I:frequency=8
+    I:frequency=4
     I:maxChunk=3
     I:maxLightlevel=-1
     I:maxSpawn=3
@@ -1088,7 +1088,7 @@ herma {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=WATER_CREATURE
 }
 
 
@@ -1109,7 +1109,7 @@ ignibus {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -1151,7 +1151,7 @@ ioray {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=WATER_CREATURE
 }
 
 
@@ -1214,7 +1214,7 @@ joust {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -1235,7 +1235,7 @@ joustalpha {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -1277,7 +1277,7 @@ kobold {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -1288,7 +1288,7 @@ kobold {
 krake {
     S:biomegroups <KRAKE_DEFAULT>
     B:canSpawn=true
-    I:frequency=4
+    I:frequency=6
     I:maxChunk=3
     I:maxLightlevel=-1
     I:maxSpawn=3
@@ -1298,7 +1298,7 @@ krake {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -1456,7 +1456,7 @@ maug {
 morock {
     S:biomegroups <MOROCK_DEFAULT>
     B:canSpawn=true
-    I:frequency=8
+    I:frequency=4
     I:maxChunk=1
     I:maxLightlevel=-1
     I:maxSpawn=3
@@ -1466,7 +1466,7 @@ morock {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -1477,13 +1477,13 @@ morock {
 nymph {
     S:biomegroups <NYMPH_DEFAULT>
     B:canSpawn=true
-    I:frequency=8
+    I:frequency=4
     I:maxChunk=1
     I:maxLightlevel=-1
-    I:maxSpawn=3
+    I:maxSpawn=1
     I:maxSpawnHeight=256
     I:minLightlevel=-1
-    I:minSpawn=2
+    I:minSpawn=1
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
@@ -1519,7 +1519,7 @@ pinky {
 pixen {
     S:biomegroups <PIXEN_DEFAULT>
     B:canSpawn=true
-    I:frequency=8
+    I:frequency=4
     I:maxChunk=2
     I:maxLightlevel=-1
     I:maxSpawn=3
@@ -1529,7 +1529,7 @@ pixen {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -1571,7 +1571,7 @@ quillbeast {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -1613,7 +1613,7 @@ raiko {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -1697,7 +1697,7 @@ roa {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=WATER_CREATURE
 }
 
 
@@ -1718,7 +1718,7 @@ roc {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -1739,7 +1739,7 @@ salamander {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -1760,7 +1760,7 @@ serpix {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -1802,7 +1802,7 @@ shambler {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -1823,7 +1823,7 @@ silex {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=WATER_CREATURE
 }
 
 
@@ -1844,7 +1844,7 @@ skylus {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -1876,7 +1876,7 @@ spectre {
 spriggan {
     S:biomegroups <SPRIGGAN_DEFAULT>
     B:canSpawn=true
-    I:frequency=8
+    I:frequency=4
     I:maxChunk=3
     I:maxLightlevel=-1
     I:maxSpawn=3
@@ -1886,7 +1886,7 @@ spriggan {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -1907,7 +1907,7 @@ strider {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -1928,7 +1928,7 @@ sutiramu {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -1970,7 +1970,7 @@ tarantula {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -2117,7 +2117,7 @@ uvaraptor {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -2159,7 +2159,7 @@ ventoraptor {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -2180,7 +2180,7 @@ vespid {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -2243,7 +2243,7 @@ warg {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -2285,7 +2285,7 @@ wildkin {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
@@ -2306,7 +2306,7 @@ wisp {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=AMBIENT
 }
 
 
@@ -2443,7 +2443,7 @@ zephyr {
 zoataur {
     S:biomegroups <ZOATAUR_DEFAULT>
     B:canSpawn=true
-    I:frequency=1
+    I:frequency=3
     I:maxChunk=1
     I:maxLightlevel=-1
     I:maxSpawn=1
@@ -2453,7 +2453,7 @@ zoataur {
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=MONSTER
+    S:type=CREATURE
 }
 
 
