--- a/config/infernalmobs.cfg
+++ b/config/infernalmobs.cfg
@@ -424,6 +424,7 @@ entitybasehealth {
     D:betteranimalsplus.badger=12.0
     D:betteranimalsplus.blackbear=30.0
     D:betteranimalsplus.boar=21.084749221801758
+    D:betteranimalsplus.brownbear=30.0
     D:betteranimalsplus.hirschgeist=150.0
     D:betteranimalsplus.zotzpyre=20.0
     D:bound_soul=31.020423889160156
@@ -446,6 +447,7 @@ entitybasehealth {
     D:if_hydra=200.0
     D:if_troll=100.0
     D:krake=8.0
+    D:lobber=44.0
     D:"mocreatures:biggolem"=50.0
     D:"mocreatures:caveogre"=50.0
     D:"mocreatures:fireogre"=35.0
@@ -708,14 +710,14 @@ permittedentities {
     B:barakoan_barakoana=true
     B:barakoana=true
     B:barakoaya=true
-    B:betteranimalsplus.badger=true
-    B:betteranimalsplus.blackbear=true
-    B:betteranimalsplus.boar=true
-    B:betteranimalsplus.brownbear=true
-    B:betteranimalsplus.hirschgeist=true
-    B:betteranimalsplus.lamprey=true
-    B:betteranimalsplus.shark=true
-    B:betteranimalsplus.zotzpyre=true
+    B:betteranimalsplus.badger=false
+    B:betteranimalsplus.blackbear=false
+    B:betteranimalsplus.boar=false
+    B:betteranimalsplus.brownbear=false
+    B:betteranimalsplus.hirschgeist=false
+    B:betteranimalsplus.lamprey=false
+    B:betteranimalsplus.shark=false
+    B:betteranimalsplus.zotzpyre=false
     B:bound_soul=true
     B:calpod=true
     B:"charm:spectre"=true
