--- a/config/reskillable.cfg
+++ b/config/reskillable.cfg
@@ -75,6 +75,7 @@ general {
         minecraft:bow:*=reskillable:agility|2
         minecraft:shield:*=reskillable:defense|4
         minecraft:ender_pearl:*=reskillable:magic|6
+        xpbook:xp_book:*=reskillable:magic|12
         minecraft:ender_eye:*=reskillable:magic|16
         minecraft:elytra:*=reskillable:defense|14,reskillable:agility|18
         minecraft:lead:*=reskillable:farming|4
@@ -1559,7 +1560,7 @@ trait {
         S:Requirements <
             reskillable:agility|14
          >
-        I:"Skill Point Cost"=6
+        I:"Skill Point Cost"=7
         I:"X-Pos [0-4]:"=2
         I:"Y-Pos [0-3]:"=2
     }
@@ -1589,7 +1590,7 @@ trait {
     "reskillable:neutralissse" {
         B:Enabled=true
         S:Requirements <
-            reskillable:attack|22
+            reskillable:attack|20
             reskillable:agility|10
          >
         I:"Skill Point Cost"=10
@@ -1604,7 +1605,7 @@ trait {
             reskillable:defense|12
             reskillable:agility|8
          >
-        I:"Skill Point Cost"=6
+        I:"Skill Point Cost"=10
         I:"X-Pos [0-4]:"=3
         I:"Y-Pos [0-3]:"=2
     }
@@ -1615,7 +1616,7 @@ trait {
             reskillable:building|4
             reskillable:magic|4
          >
-        I:"Skill Point Cost"=4
+        I:"Skill Point Cost"=2
         I:"X-Pos [0-4]:"=3
         I:"Y-Pos [0-3]:"=2
     }
@@ -1636,7 +1637,7 @@ trait {
         S:Requirements <
             reskillable:defense|16
          >
-        I:"Skill Point Cost"=6
+        I:"Skill Point Cost"=8
         I:"X-Pos [0-4]:"=1
         I:"Y-Pos [0-3]:"=2
     }
@@ -1655,10 +1656,10 @@ trait {
     "reskillable:more_wheat" {
         B:Enabled=true
         S:Requirements <
-            reskillable:farming|6
+            reskillable:farming|8
             reskillable:gathering|6
          >
-        I:"Skill Point Cost"=2
+        I:"Skill Point Cost"=4
         I:"X-Pos [0-4]:"=1
         I:"Y-Pos [0-3]:"=2
     }
@@ -1688,11 +1689,9 @@ trait {
     "reskillable:drop_guarantee" {
         B:Enabled=true
         S:Requirements <
-            reskillable:gathering|14
-            reskillable:attack|8
-            reskillable:magic|4
+            reskillable:gathering|8
          >
-        I:"Skill Point Cost"=6
+        I:"Skill Point Cost"=4
         I:"X-Pos [0-4]:"=1
         I:"Y-Pos [0-3]:"=1
     }
@@ -1700,13 +1699,12 @@ trait {
     "reskillable:golden_osmosis" {
         B:Enabled=true
         S:Requirements <
-            
             reskillable:mining|4
             reskillable:gathering|4
             reskillable:attack|4
-            reskillable:magic|10
+            reskillable:magic|12
          >
-        I:"Skill Point Cost"=5
+        I:"Skill Point Cost"=6
         I:"X-Pos [0-4]:"=3
         I:"Y-Pos [0-3]:"=2
     }
@@ -1714,12 +1712,10 @@ trait {
     "reskillable:safe_port" {
         B:Enabled=true
         S:Requirements <
-            
-            reskillable:agility|16
-            reskillable:defense|16
-            reskillable:magic|12
+            reskillable:defense|8
+            reskillable:magic|16
          >
-        I:"Skill Point Cost"=6
+        I:"Skill Point Cost"=8
         I:"X-Pos [0-4]:"=1
         I:"Y-Pos [0-3]:"=1
     }
@@ -1737,9 +1733,9 @@ trait {
     "reskillable:obsidian_smasher" {
         B:Enabled=true
         S:Requirements <
-            reskillable:mining|18
+            reskillable:mining|12
          >
-        I:"Skill Point Cost"=4
+        I:"Skill Point Cost"=6
         I:"X-Pos [0-4]:"=1
         I:"Y-Pos [0-3]:"=2
     }
@@ -1747,7 +1743,7 @@ trait {
     "reskillable:hungry_farmer" {
         B:Enabled=true
         S:Requirements <
-            reskillable:farming|32
+            reskillable:farming|16
          >
         I:"Skill Point Cost"=8
         I:"X-Pos [0-4]:"=2
@@ -1757,9 +1753,9 @@ trait {
     "elenaidodge:dodge" {
         B:Enabled=true
         S:Requirements <
-            reskillable:agility|14
+            reskillable:agility|8
          >
-        I:"Skill Point Cost"=6
+        I:"Skill Point Cost"=4
         I:"X-Pos [0-4]:"=2
         I:"Y-Pos [0-3]:"=0
     }
