--- a/config/CustomSpawner/overworld/Creatures/Vanilla.cfg
+++ b/config/CustomSpawner/overworld/Creatures/Vanilla.cfg
@@ -763,7 +763,7 @@ spider {
 squid {
     S:biomegroups <SQUID_DEFAULT>
     B:canSpawn=true
-    I:frequency=10
+    I:frequency=2
     I:maxChunk=4
     I:maxLightlevel=-1
     I:maxSpawn=4
@@ -825,18 +825,18 @@ vex {
 
 villager {
     S:biomegroups <VILLAGER_DEFAULT>
-    B:canSpawn=false
-    I:frequency=8
+    B:canSpawn=true
+    I:frequency=1
     I:maxChunk=4
     I:maxLightlevel=-1
-    I:maxSpawn=3
+    I:maxSpawn=1
     I:maxSpawnHeight=256
     I:minLightlevel=-1
-    I:minSpawn=2
+    I:minSpawn=1
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
-    S:type=UNDEFINED
+    S:type=AMBIENT
 }
 
 
@@ -958,7 +958,7 @@ wolf {
     I:maxSpawn=4
     I:maxSpawnHeight=256
     I:minLightlevel=-1
-    I:minSpawn=4
+    I:minSpawn=2
     I:minSpawnHeight=0
     S:opaqueBlock=all
     S:spawnBlockBlacklist <>
@@ -994,7 +994,7 @@ zombie {
 zombiehorse {
     S:biomegroups <ZOMBIEHORSE_DEFAULT>
     B:canSpawn=true
-    I:frequency=8
+    I:frequency=20
     I:maxChunk=6
     I:maxLightlevel=-1
     I:maxSpawn=3
