--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,8 @@
 !resourcepacks/**
 !mods
 !/mods/**
+!/structures/**
+!/structures
 !README.md
 /config/UniqueNames.txt
 /config/globalgamerules.cfg 
