--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@
 /config/InvTweaks/**
 !scripts
 !scripts/**
+!resourcepacks
+resourcepacks/**
 !resourcepacks/AntiqueAtlasExtra-v1.2
 !resourcepacks/lycanites_redux_6.0.1
 !resourcepacks/Better Vanilla - HardcoreDarkness
